tests/ui/dis/ptr_copy.normal.stderr
error: Cannot memcpy dynamically sized data
    --> $CORE_SRC/intrinsics.rs:2212:9
     |
2212 |         copy(src, dst, count)
     |         ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

